<resources>
    <string name="app_name" translatable="false">My Store</string>
    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="register"><u>Register</u></string>
    <string name="register_term_and_condition">
        <b>Welcome to My Store.</b>
        My Store provide features and other products and services to you. By using the My Store, you agree,
        on behalf of yourself and all members of your household
        and others who use any Service under your account, to the following conditions.

        <b>Please read these conditions carefully.</b>
        <i>We offer a wide range of My Store Services, and sometimes additional terms may apply.</i> >
       <b>ELECTRONIC COMMUNICATIONS</b>
    <i>You agree that all agreements, notices, disclosures,
        and other communications that we provide to you electronically
        satisfy any legal requirement that such communications be in writing.</i>
        <b>COPYRIGHT</b>
        <i>All content included in or made available through any  My Store Service,
            such as text, graphics, logos, button icons, images, audio clips, digital downloads, data compilations, and software is the property of
            Mystic or its content suppliers and protected by Indian and international copyright laws.
            The compilation of all content included in or made available through any My Store Service
            is the exclusive property of
            My Store and protected by Indian and international copyright laws.</i>
        <b>LICENSE AND ACCESS</b>
        <i>Subject to your compliance with these Conditions of Use and any Service Terms,
            and your payment of any applicable fees, My Store or its content providers grant you a limited,
            non-exclusive, non-transferable, non-sublicensable license to access and make personal and
            non-commercial use of the My Store Services.
            This license does not include any resale or commercial use of any My Store Service,
            or its contents; any collection and use of any product listings, descriptions, or prices;
            any derivative use of any My Store Service or its contents; any downloading,
            copying, or other use of account information for the benefit of any third party;
            or any use of data mining, robots, or similar data gathering and extraction tools.
            All rights not expressly granted to you in these Conditions of Use or any Service Terms are
            reserved and retained by My Store or its licensors, suppliers, publishers,
            rightsholders, or other content providers. You may not misuse the
            My Store Services. You may use the Services only as permitted by law. The licenses granted by
           My Store terminate if you do not comply with these Conditions of Use or any Service Terms.</i>
       <b>YOUR ACCOUNT</b>
        <i>You may need your own  account to use certain Services,
            and you may be required to be logged in to the account and have a valid payment method
            associated with it.
            If there is a problem charging your selected payment method,
            we may charge any other valid payment method associated with your account.
           You are responsible for maintaining the confidentiality of your account and password
            and for restricting access to your account,
            and you agree to accept responsibility for all activities that occur under
            your account or password.
            you can purchase with a credit card or other permitted payment method.
            If you are under 18, you may use the  Services only with involvement of a parent or guardian.
            Parents and guardians may create profiles for teenagers in their  Household.
            Alcohol listings on My Store are intended for adults.
            You must be at least 21 years of age to purchase alcohol,
            or use any site functionality related to alcohol.</i>
        <b>PRICING</b>
        <i>
            "List Price" means the suggested retail price of a product as provided by a manufacturer,
            supplier, or seller.
            We regularly check List Prices against prices recently found on My Store and other retailers.
            Certain products may have a "Was Price" displayed, which is determined using recent price history
            of the product on My Store.
            With respect to items sold by My Store, we cannot confirm the price of an item until you order.
            Despite our best efforts, a small number of the items in our catalog may be mispriced.
            If the correct price of an item sold by My Store is higher than our stated price,
            we will, at our discretion, either contact you for instructions before shipping or cancel
            your order and notify you of such cancellation. Other merchants may follow different policies
            in the event of a mispriced item.
            We generally do not charge your credit card until after your order has entered the shipping process or,
            for digital products, until we make the digital product available to you.
        </i>
      <b>OUR ADDRESS</b>
        <i> My Store services guna (m.p.) 473111</i>
        <h4>Refunds</h4>
        <i>When you return an item, your refund amount and refund method may vary.
            You can check the payment method that was refunded and the status of your refund in Your Orders.
        After the carrier has received your item, it can take up to two weeks for us to receive and process your return.
        </i>
        <h4>Contact Us</h4>
        <u> email :adarshdhakad50@gmail.com
            <h6>mobile number: +917583035454 </h6>
        </u>

    </string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_and_condition">
I Agree To The
<u> Terms &amp; Condition </u>
    </string>
    <string name="btn_lbl_register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">
        <u>Login</u>
    </string>
    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">PLease enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter__cnm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_term_and_condition">Please agree terms and condition.</string>
    <string name="registry_successfull">Thanks for registering</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="email_sent_success">Email sent successfully to reset your password !</string>
    <string name="register_success">You are registered successfully.</string>
    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_title_description">Enter your username and e-mail address we\'ll send you a email to reset your password</string>
    <string name="title_complete_profile">COMPLETE PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>
    <string name="rb_lbl_user">USER</string>
    <string name="rb_lbl_doctor">DOCTOR</string>
    <string name="read_storage_permission_dened">"Oops, you just denied the permission for storage.You can also allow it from settings. "</string>
    <string name="image_selection_failed">Image Selection Failed!</string>
    <string name="err_msg_enter_mobile_number">Please enter mobile number.</string>
    <string name="msg_mobile_update_success">Your profile is updated successfully.</string>
    <string name="title_products">Products</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_orders">Orders</string>
    <string name="please_click_back_again_to_exit">Please click back to exit.</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_settings">Setting</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>
    <string name="title_edit_profile">EDIT PROFILE</string>
    <string name="action_add_product">Add Product</string>
    <string name="title_add_product">ADD PRODUCT</string>
    <string name="et_hint_product_title">Product Title</string>
    <string name="et_hint_product_description">Product Description</string>
    <string name="et_hint_product_price">Product Price (₹)</string>
    <string name="et_hint_product_quantity">Product Quantity</string>
    <string name="btn_lbl_submit">SUBMIT</string>
    <string name="err_msg_select_product_image">Please select product image.</string>
    <string name="err_msg_enter_product_title">Please enter product title.</string>
    <string name="err_msg_enter_product_price">Please enter product price.</string>
    <string name="err_msg_enter_product_description">Please enter product description.</string>
    <string name="err_msg_enter_product_quantity">Please enter product quantity.</string>
    <string name="product_uploaded_success_message">Your product is uploaded successfully.</string>
    <string name="no_products_added_yet">No products added yet!</string>
    <string name="no_dashboard_item_found">No items found!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_delete_success_message">Your product is deleted successfully.</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete the product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_product_details">PRODUCT DETAILS</string>
    <string name="lbl_product_description">Product Description</string>
    <string name="lbl_product_details_stock_quantity">Stock Quantity</string>
    <string name="btn_lbl_add_to_cart">ADD TO CART</string>
    <string name="btn_lbl_go_to_cart">GO TO CART</string>
    <string name="success_message_item_added_to_cart">Product was added to your cart.</string>
    <string name="title_my_cart">MY CART</string>
    <string name="no_cart_item_found">No item found in cart!</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">Shipping Charge</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="btn_lbl_checkout">Checkout</string>
    <string name="action_cart">My Cart</string>
    <string name="lbl_out_of_stock">OUT OF STOCK</string>
    <string name="msg_item_removed_successfully">Item removed successfully.</string>
    <string name="msg_for_available_stack">Available stock is %1$s!. You can not add more than stock quantity.</string>
    <string name="title_address_list">ADDRESS LIST</string>
    <string name="no_address_found">No Address Found!</string>
    <string name="lbL_add_address">Add Address</string>
</resources>