<?xml version="1.0" encoding="UTF-8"?>

<!--TODO Step 2: Design the settings screen layout-->

<!--START-->

    <ScrollView
    tools:context=".ui.activities.SettingsActivity"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:fillViewport="true"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--END-->


    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">


    <FrameLayout
        android:layout_height="@dimen/header_image_height"
        android:layout_width="match_parent"
        android:id="@+id/fl_header_bg">

    <ImageView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/iv_header_bg"
        android:src="@drawable/auth_screens_background"
        android:scaleType="fitXY"
        android:contentDescription="@string/content_description"/>


    <androidx.appcompat.widget.Toolbar
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:id="@+id/toolbar_settings_activity">

    <TextView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/tv_title"
        android:textStyle="bold"
        android:textSize="@dimen/toolbar_title_text_size"
        android:textColor="@color/white"
        android:text="@string/title_settings"
        android:paddingEnd="0dp"
        android:paddingStart="@dimen/toolbar_title_paddingStart"
        android:gravity="center"/>

</androidx.appcompat.widget.Toolbar>

</FrameLayout>


    <FrameLayout
        android:layout_height="@dimen/settings_user_image_size"
        android:layout_width="@dimen/settings_user_image_size"
        android:id="@+id/fl_user_image"
        android:layout_marginTop="@dimen/settings_user_image_marginTop"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/fl_header_bg">
        <View
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:background="@drawable/user_image_background"/>

    <ImageView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/iv_user_photo"
        android:src="@drawable/ic_user_placeholder"
        android:scaleType="fitXY"
        android:contentDescription="@string/content_description"
        android:layout_margin="@dimen/settings_user_picture_margin"/>



</FrameLayout>

    <com.example.myshop.utils.MSPTextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/tv_edit"
        android:textSize="@dimen/settings_edit_label_textSize"
        android:textColor="@color/colorSecondaryText"
        android:text="@string/lbl_edit"
        android:paddingEnd="@dimen/settings_edit_label_marginStartEnd"
        android:paddingStart="@dimen/settings_edit_label_marginStartEnd"
        android:layout_below="@id/fl_header_bg"
        android:layout_margin="16dp"
        android:background="@drawable/item_grey_border_background"
        android:paddingBottom="@dimen/settings_edit_label_marginTopBottom"
        android:paddingTop="@dimen/settings_edit_label_marginTopBottom"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:layout_alignParentEnd="true"/>

    <com.example.myshop.utils.MSPTextViewBold
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/tv_name"
        android:textSize="@dimen/settings_name_textSize"
        android:textColor="@color/colorDarkGrey"
        tools:text="Denis Panjuta"
        android:layout_marginTop="@dimen/settings_name_marginTop"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/fl_user_image"/>

    <com.example.myshop.utils.MSPTextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/tv_gender"
        android:textSize="@dimen/settings_info_textSize"
        android:textColor="@color/colorSecondaryText"
        tools:text="Male"
        android:layout_marginTop="@dimen/settings_info_marginTop"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_name"/>

    <com.example.myshop.utils.MSPTextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/tv_email"
        android:textSize="@dimen/settings_info_textSize"
        android:textColor="@color/colorSecondaryText"
        tools:text="denis.panjuta@gmail.com"
        android:layout_marginTop="@dimen/settings_info_marginTop"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_gender"/>

    <com.example.myshop.utils.MSPTextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/tv_mobile_number"
        android:textSize="@dimen/settings_info_textSize"
        android:textColor="@color/colorSecondaryText"
        tools:text="123456789"
        android:layout_marginTop="@dimen/settings_info_marginTop"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_email"/>


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/ll_address"
        android:layout_below="@id/tv_mobile_number"
        android:layout_margin="@dimen/settings_address_margin"
        android:background="@drawable/item_grey_border_background"
        android:foreground="?attr/selectableItemBackground"
        android:padding="@dimen/settings_address_padding"
        android:orientation="horizontal">

    <com.example.myshop.utils.MSPTextView
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:textSize="@dimen/settings_lbl_addresses_textSize"
        android:textColor="@color/colorSecondaryText"
        android:text="@string/lbl_addresses"
        android:layout_margin="@dimen/settings_lbl_addresses_margin"
        android:layout_weight="1"/>

    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/ic_vector_chevron_right"
        android:contentDescription="@string/content_description"/>

</LinearLayout>

    <com.example.myshop.utils.MSPButton
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/btn_logout"
        android:textSize="@dimen/btn_textSize"
        android:textColor="@android:color/white"
        android:text="@string/btn_lbl_logout"
        android:gravity="center"
        android:layout_marginTop="@dimen/settings_button_marginTopBottom"
        android:layout_below="@id/ll_address"
        android:background="@drawable/button_background"
        android:paddingBottom="@dimen/btn_padding"
        android:paddingTop="@dimen/btn_padding"
        android:foreground="?attr/selectableItemBackground"
        android:layout_marginBottom="@dimen/settings_button_marginTopBottom"
        android:layout_marginEnd="@dimen/settings_button_marginStartEnd"
        android:layout_marginStart="@dimen/settings_button_marginStartEnd"
        android:layout_gravity="center"/>

</RelativeLayout>

</ScrollView>